--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
+    "build:vercel": "tsc -b && vite build --config vite.vercel.config.ts",
     "lint": "eslint .",
     "preview": "vite preview"
   },
