Fix Vercel config - simple version

--- a/vercel.json
+++ b/vercel.json
@@ -2,17 +2,5 @@
   "buildCommand": "npm run build:vercel",
  "outputDirectory": "dist",
   "framework": "vite",
- "installCommand": "npm install",
-  "rewrites": [
-    { "source": "/(*)", "destination": "/" }
-  ],
-  "cleanUrls": true,
-  "trailingSlash": false,
-  "headers": {
-    "Access-Control-Allow-Origin": "*",
-    "Cache-Control": "no-cache",
-    "Lock": {
-      "control": "no-store"
-    }
-  }
+ "installCommand": "npm install"
 }
